--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,7 @@ button{
 	width: 20%;
 	height: 5%;
 	font-family: 'Acme', sans-serif;
-	font-size: 25px;
+	font-size: 100%;
 	margin-left: 40%;
 	margin-top: 1%;
 }
