--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@ body{
 	margin-right: auto;
 	font-family: 'Acme', sans-serif;
 	background-color: #f5f7a3;
+	color: #5dd2d8;
 }
 h1{
 	margin:0;
@@ -39,7 +40,6 @@ h1{
 	margin-top: 5%;
 }
 .fild .row{
-	
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 }
@@ -63,7 +63,16 @@ button{
 	width: 20%;
 	height: 5%;
 	font-family: 'Acme', sans-serif;
-	font-size: 20px;
+	font-size: 100%;
 	margin-left: 40%;
 	margin-top: 1%;
+	border-radius: 10px;
+	border: none;
+	box-shadow:0 0 5px rgba(0,0,0,0.5);
+	background-color: #60d1be;
+	color: #f5f7a3;
 }
+button:hover{
+	background-color: #5dd2d8;
+}
+
